WIP: Add initial token exchange support
